<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_gray_32dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_people_list"
            android:icon="@drawable/ic_view_list_gray_32dp"
            android:title="@string/peoplelist" />
        <item
            android:id="@+id/nav_contact_us"
            android:icon="@drawable/ic_email_gray_32dp"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout_gray_32dp"
            android:title="@string/logout" />

    </group>


</menu>
