<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/home_background_color"

    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@color/text_view_home_background"
        android:elevation="8dp"
        android:padding="8dp"
        android:textColor="@color/text_color"
        android:text="@string/text_paragraph"
        android:textSize="18sp" />

    <Button
        android:id="@+id/send_email_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_email_white"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/send_email"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_phone_white"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/call"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/visit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorAccent"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_insert_white"
        android:gravity="start|center"
        android:padding="10dp"
        android:text="@string/visit_website"

        android:textColor="@color/white" />
</LinearLayout>
</ScrollView>