<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_android_mood_happy" />

    <LinearLayout
        android:padding="10dp"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_background"
        android:orientation="vertical">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Android Moods"
    android:textColor="@android:color/white"
    android:textSize="13sp"
    android:textStyle="bold"
    />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"


            >

        </Spinner>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@android:color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_text_name_dialog"
            android:hint="@string/enter_name"
            android:textColorHint="@color/gray"
            android:textSize="12sp"
            />
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/cancel_dialog"
                android:layout_marginEnd="10dp"
                android:elevation="10dp"
                android:background="@drawable/custom_btn_2"

                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"
                android:id="@+id/ok_dialog"
                android:elevation="10dp"
                android:background="@drawable/custom_btn_2"
                />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>